@@ -35,7 +35,7 @@ sub f {
 
 # FIXME: add translated items
 
-sub is_removable { $_[0] =~ /FLOPPY|ZIP|DVDROM|CDROM|BURNER/ }
+sub is_removable { $_[0] =~ /FLOPPY|ZIP/ }
 
 sub set_removable_configurator {
     my ($class, $device) = @_;
@@ -98,7 +98,7 @@ our @tree =
       icon => "cd.png",
       configurator => "",
       detector => sub { f(grep { !(detect_devices::isBurner($_) || detect_devices::isDvdDrive($_)) } &detect_devices::cdroms) },
-      checked_on_boot => 1,
+      checked_on_boot => 0,
       automatic => 1,
      },
 
@@ -108,7 +108,7 @@ our @tree =
       icon => "cd.png",
       configurator => "",
       detector => sub { f(detect_devices::burners()) },
-      checked_on_boot => 1,
+      checked_on_boot => 0,
       automatic => 1,
      },
 
@@ -118,7 +118,7 @@ our @tree =
       icon => "cd.png",
       configurator => "",
       detector => sub { f(grep { ! detect_devices::isBurner($_) } detect_devices::dvdroms()) },
-      checked_on_boot => 1,
+      checked_on_boot => 0,
       automatic => 1,
      },
 
