@@ -1,3 +1,7 @@
+- harddrake:
+  o do not auto-configure CD-Rom drives in fstab, it fordbids
+    umounting with hal (install does not configure them in fstab either)
+
 Version 10.4.207 - 21 September 2007, by Thierry Vignaud
 
 - drakboot:
